--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vitejs/plugin-react": "^4.5.2",
     "axios": "^1.10.0",
     "prop-types": "^15.8.1",
     "proptypes": "^1.1.0",
